--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,8 @@ Imported stylesheets. Remove the ones you do not want to use.
 */
 
 @import url("scroll-to-top.css");
+@import url("masonry.css");
+
 /*
 
 X-Small devices (portrait phones, less than 576px) 
@@ -176,7 +178,16 @@ h4 {
   letter-spacing: -0.52px;
   color: var(--h4-color);
 }
-
+.footer-subheading {
+  font-family: "Montserrat";
+  font-size: 1.625rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.52px;
+  color: var(--h4-color);
+  margin-bottom: 1rem;
+}
 h5 {
   font-family: "Abel";
   font-size: 1.875rem;
@@ -204,7 +215,9 @@ em {
 }
 
 .hero-headline {
-  color: var(--overlay-color);
+  text-align: left;
+  color: var(--h1-color);
+  line-height: 1.2;
 }
 
 .project-title {
@@ -247,6 +260,12 @@ a:active {
   /* Tap on mobile */
 }
 
+a.footer-social-link {
+  color: var(--overlay-color);
+}
+a.footer-social-link:hover {
+  color: var(--accent-color);
+}
 .navigation-arrow {
   color: var(--accent-color);
 }
@@ -283,6 +302,7 @@ a:active {
   line-height: 1.3;
 }
 .branding {
+  width: 10rem;
   margin-bottom: 2rem;
 }
 .navigation {
@@ -305,9 +325,9 @@ a:active {
 .socials-list-footer {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: flex-start;
   width: 100%;
-  padding: 4rem 3rem 4rem 3rem; /* top right bottom left */
+  padding: 1rem 1rem 1rem 0; /* top right bottom left */
 }
 .social-item {
   font-size: 3rem;
@@ -363,7 +383,7 @@ a:active {
   min-height: 8rem;
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: left center;
 }
 
 /* Logo Image Array */
@@ -541,8 +561,6 @@ a:active {
 }
 
 .footer-item-1 {
-  padding-top: 4.8902195608782435vh;
-  padding-bottom: 4.8902195608782435vh;
 }
 
 .footer-item-2 {
@@ -553,13 +571,11 @@ a:active {
 .footer-item-3 {
   grid-row: 1;
   flex-shrink: 0;
-  padding-left: 53px;
 }
 
 .footer-item-4 {
   grid-row: 1;
   flex-shrink: 0;
-  padding-left: 53px;
 }
 
 /* Project Page 
@@ -624,6 +640,7 @@ a:active {
 
 .project-details {
   width: 100%;
+  margin-bottom: 2rem;
 }
 
 /* 
@@ -732,30 +749,6 @@ a:active {
 ██      ██      ██   ██    ██    
 ██      ███████ ██   ██    ██    
 */
-
-/* Define the masonry grid container */
-.masonry {
-  column-count: 3; /* Adjust the number of columns as needed */
-  column-gap: 1rem; /* Adjust the gap between columns */
-  flex-shrink: 1;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 0.25rem;
-}
-
-/* Style the individual grid items */
-.masonry-item {
-  display: inline-block;
-  width: 100%; /* Each item takes the full column width */
-  height: auto;
-  position: relative;
-  break-inside: avoid-column; /* Prevent items from breaking across columns */
-  margin: 0 0em; /* Adjust the margin between items */
-  background-color: var(
-    --background-color
-  ); /* Add background color for better visibility */
-  padding: 0.5rem; /* Add padding for spacing within items */
-  box-sizing: border-box; /* Include padding and border in the item's total width */
-}
 
 .play-page {
   display: grid;
@@ -946,7 +939,7 @@ a.sub-navigation-link:hover {
   }
 
   .global-footer {
-    padding: 4rem 4rem 0 4rem;
+    padding: 4rem 4rem 4rem 4rem;
     grid-template-columns: 1fr 1fr 1fr;
   }
 
